[package]
name = "libvips-rs"
version = "0.1.0"
authors = ["bongole <bongole2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libvips-sys = { path = "../libvips-sys" }

[dev-dependencies]
criterion = "0.3.4"
tempfile = "3.2.0"

[[bench]]
name = "bench"
harness = false