[package]
name = "libvips-sys"
version = "0.1.0"
authors = ["bongole <bongole2@gmail.com>"]
edition = "2018"
links = "vips"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.58.1"
cc = "1.0.68"
pkg-config = "0.3.19"
