[package]
edition = "2018"
name = "node-vips"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version="1", features=["napi6"]}
napi-derive = "1"
libvips-rs = { path="../libvips-rs" }
flume = "0.10.3"
threadpool = "1.8.1"
once_cell = "1.7.2"

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
