[package]
edition = "2018"
name = "node-vips"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "1.6.1", features = ["napi6"] }
napi-derive = "1.1.0"
libvips-rs = { path="../libvips-rs" }
threadpool = "1.8.1"
once_cell = "1.7.2"
parking_lot = "0.11.1"

[build-dependencies]
napi-build = "1.0.2"

[profile.release]
lto = true
debug = true
