[package]
name = "vips-stream"
version = "0.1.0"
authors = ["bongole <bongole2@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "vips_stream"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.1"

[dependencies]
neon = "0.7.1"