[package]
name = "node-vips"
version = "0.1.0"
authors = ["bongole <bongole2@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_vips"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.0"

[dependencies]
neon = "0.8.0"
